--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <meta name="keywords" content="Elisa Manzoni, portfolio">
+    <meta name="keywords" content="Elisa Manzoni, portfolio" title="Manzoni Elisa">
 </head>
 
 <body>
@@ -35,19 +35,28 @@
 
   <div id="body" class="body">
     <div id="titolo" class="titolo margin_top">
-      Mi presento <br>
-      sono Elisa Manzoni,
+      <!-- Mi presento <br>
+      sono Elisa Manzoni, -->
+
+      Hello! <br>
+      I'm Elisa Manzoni
     </div>
     <img src="images/elisa.png" class="margin_top img">
     <div id="descrizione" class="descrizione margin_top">
-      dipendente fin da piccola dai videogiochi e amante delle illustrazioni digitali, ho scelto quasi automaticamente di studiare grafica al liceo artistico e successivamente Design della Comunicazione al Politecnico di Milano.
+<!-- ITALIANO -->
+      <!-- dipendente fin da piccola dai videogiochi e amante delle illustrazioni digitali, ho scelto quasi automaticamente di studiare grafica al liceo artistico e successivamente Design della Comunicazione al Politecnico di Milano.
       L’amore per la grafica è nato praticamente subito, ma il percorso universitario mi ha permesso di approfondire l’importanza della comunicazione in ogni sua sfaccettatura e quanto questa cambi in base alla persona con la quale ci si rapporta. <br><br>
-      Cresciuta in un paesino nella bergamasca dove l’evento più mondano è la festa dell’oratorio dove tutti si conoscono e ognuno dà una mano, tendo a lanciarmi sempre in nuove esperienze e a rapportarmi facilmente con gli altri. La mia propensione per i lavori di gruppo deriva anche dalla pallavolo, sport che pratico da quando ne ho memoria, questo spiega il mio carattere determinato e deciso.
+      Cresciuta in un paesino nella bergamasca dove l’evento più mondano è la festa dell’oratorio dove tutti si conoscono e ognuno dà una mano, tendo a lanciarmi sempre in nuove esperienze e a rapportarmi facilmente con gli altri. La mia propensione per i lavori di gruppo deriva anche dalla pallavolo, sport che pratico da quando ne ho memoria, questo spiega il mio carattere determinato e deciso. -->
+
+<!-- INGLESE -->
+      since I was a child I was addicted to video games and a digital illustrations lover. I automatically chose to study Graphic Design at the Art High School and then Communication Design at Politecnico of Milan.
+      The love for graphic design was born immediately, my university career allowed me to study in deep the importance of communication in all its facets and how much this changes based on the person you relate to. <br><br>
+      Grown up in a small city in Lombardy, where the most exited event is the oratory festival, I tend to embark on new experiences and to relate easily with others. My inclination for team works also derives from volleyball, a sport that I practised since I was young, this explains my determined and decisive nature.
     </div>
     <div id="line_descrizione" class="line margin_top"> </div>
     <div id="contact_link" class="contact">
       Mail: <a class="underline" href="mailto:elisamanzoni98@gmail.com"> elisamanzoni98@gmail.com </a><br>
-      Telefono: <a  class="underline" href="tel:+393486581621"> 3486581621 </a><br>
+      Phone: <a  class="underline" href="tel:+393486581621"> 3486581621 </a><br>
       Behance: <a  class="underline" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
     </div>
   </div>
