--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
 
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <meta name="keywords" content="Elisa Manzoni, portfolio">
+    <meta name="keywords" content="Elisa Manzoni, portfolio" title="Manzoni Elisa">
 </head>
 
 <body>
@@ -48,17 +48,23 @@
       <img src="images/olympic.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026
+          <!-- Pop up store che promuove i giochi olimpici invernali di Milano Cortina 2026 -->
+          Pop up store that promotes the Milan Cortina 2026 Winter Olympics
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
+          <!-- Competenze: <br>
           - Progettazione d'interni <br>
           - Identità visiva <br>
+          - Service design <br>
+          - Team working -->
+          Skills: <br>
+          - Interior design <br>
+          - Visual identity <br>
           - Service design <br>
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100242791/Olympic-Explore" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100242791/Olympic-Explore" class="green"> Complete project → </a> </div>
         </div>
       </div>
     <div id="line_works" class="line line_works"></div>
@@ -75,17 +81,19 @@
       <img src="images/deposito.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Installazione di speculative design con lo scopo di far riflettere sulla morte
+          <!-- Installazione di speculative design con lo scopo di far riflettere sulla morte -->
+          Communicative machine speculating on death
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Interazione digitale <br>
-          - Interfaccia utente <br>
-          - Programmazione web <br>
+          Skills: <br>
+          - Digital interaction <br>
+          - UI / UX <br>
+          - Web programming <br>
           - Space design
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Complete project → </a> <br>
+          <a target="_blank" href="https://speculativeedu.eu/case-study-communicative-machines-speculating-on-death/" class="green"> Mention on SpeculativeEdu → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -102,18 +110,19 @@
       <img src="images/zefir.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione.
+          <!-- Fictional brand di macchine volanti che manifesta i suoi valori in ogni declinazione. -->
+          Fictional flying cars brand that manifests its values ​​in every declination.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Identità visiva <br>
-          - Interfaccia utente <br>
+          Skills: <br>
+          - Visual Identity<br>
+          - UX / UI<br>
           - Service design <br>
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100108377/ZEFIR" class="green"> Progetto completo → </a> <br>
-          <a target="_blank" href="https://youtu.be/V7d_GVEcouw" class="green"> Video Zefir app → </a>
+          <a target="_blank" href="https://www.behance.net/gallery/100108377/ZEFIR" class="green"> Complete project → </a> <br>
+          <a target="_blank" href="https://youtu.be/V7d_GVEcouw" class="green"> Zefir app video → </a>
         </div>
       </div>
     </div>
@@ -131,17 +140,18 @@
       <img src="images/izi.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Spazio digitale comune che invita gli utenti alla collaborazione
+          <!-- Spazio digitale comune che invita gli utenti alla collaborazione -->
+          Common digital space that invites users to collaborate
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Interazione digitale <br>
-          - Interfaccia utente <br>
-          - Programmazione web <br>
+          Skills: <br>
+          - Digital interaction <br>
+          - UX / UI <br>
+          - Web programming <br>
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Provalo qui → </a> <br>
-          <a target="_blank" href="https://www.behance.net/gallery/100250837/Izi-photo-mosaic" class="green"> Progetto completo → </a>
+          <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Try it here → </a> <br>
+          <a target="_blank" href="https://www.behance.net/gallery/100250837/Izi-photo-mosaic" class="green"> Complete project → </a>
       </div>
       </div>
     </div>
@@ -151,7 +161,7 @@
   <div id="container" class="container">
     <div id="container_diciotti" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
-      <div id="diciotti_nome" class="lavori_nomi nome"> Il caso Diciotti </div>
+      <div id="diciotti_nome" class="lavori_nomi nome"> Diciotti's case </div>
       <img src="images/arrow.png" id="diciotti_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
     </div>
@@ -159,15 +169,16 @@
       <img src="images/diciotti.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti
+          <!-- Analisi crossmediale e transmediale del caso mediatico riguardante la nave Diciotti -->
+          Cross-media and transmedia analysis of the media case regarding the Diciotti ship
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Progettazione grafica <br>
+          Skills: <br>
+          - Graphic design <br>
           - Data visualization
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Complete project → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -184,15 +195,16 @@
       <img src="images/arthur.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Videogioco platform che racconta la continuazione de “La spada nella roccia”
+          <!-- Videogioco platform che racconta la continuazione de “La spada nella roccia” -->
+          Platform video game that tells the continuation of "The Sword in the Stone"
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Modellazione 3D <br>
-          - Progettazione grafica
+          Skills: <br>
+          - 3D modeling <br>
+          - Graphic design
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a></div>
+          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Try it here (only for computer) → </a></div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -209,16 +221,17 @@
       <img src="images/sparkle.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Fictional brand di crociere che si distingue dai suoi competitors e soddisfa i bisogni del proprio target.
+          <!-- Fictional brand di crociere che si distingue dai suoi competitors e soddisfa i bisogni del proprio target. -->
+          Fictional cruise brand that stands out from its competitors and meets the needs of its target.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Progettazione grafica <br>
-          - Data visualization <br>
+          Skills: <br>
+          - Graphic design <br>
+          - Adv campaign <br>
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a>
+          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Complete project → </a>
         </div>
       </div>
     </div>
@@ -230,22 +243,22 @@
       <div id="year" class="lavori_nomi year"> 2018 </div>
       <div id="assunta_nome" class="lavori_nomi nome"> Oratorio in festa </div>
       <img src="images/arrow.png" id="assunta_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Identità visiva </div>
+      <div id="categoria" class="lavori_nomi categoria"> Visual identity </div>
     </div>
     <div id="description_assunta" class="display_none">
       <img src="images/assunta.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Identità visiva per la festa estiva dell’oratorio di Sotto il Monte.
+          Visual identity and social campaign for the Sotto il Monte's summer festival.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Progettazione grafica <br>
-          - Identità visiva <br>
-          - Campagna social
+          Skills: <br>
+          - Graphic design <br>
+          - Visual identity <br>
+          - Social campaign
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.instagram.com/sottoilmonteinfesta/?hl=it" class="green"> Pagina Instagram → </a>
+          <a target="_blank" href="https://www.instagram.com/sottoilmonteinfesta/?hl=it" class="green"> Instagram page → </a>
         </div>
       </div>
     </div>
@@ -257,18 +270,19 @@
       <div id="year" class="lavori_nomi year"> 2018 </div>
       <div id="mengoni_nome" class="lavori_nomi nome"> Atlantico Mengoni </div>
       <img src="images/arrow.png" id="mengoni_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Illustrazione vettoriale </div>
+      <div id="categoria" class="lavori_nomi categoria"> Vector illustration </div>
     </div>
     <div id="description_mengoni" class="display_none">
       <img src="images/mengoni.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Elaborato grafico per la promozione dell’album “Atlantico” di Marco Mengoni.
+          <!-- Elaborato grafico per la promozione dell’album “Atlantico” di Marco Mengoni. -->
+          Graphic project for the promotion of Marco Mengoni's "Atlantico" album.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Progettazione grafica <br>
-          - Disegno manuale
+          Skills: <br>
+          - Graphic design <br>
+          - Drawing
         </div>
       </div>
     </div>
@@ -286,17 +300,16 @@
       <img src="images/whyracism.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Elaborato editoriale che vuole far riflettere sulla discriminazione.
+          <!-- Elaborato editoriale che vuole far riflettere sulla discriminazione. -->
+          Editorial design project on discrimination.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Identità visiva <br>
-          - Interfaccia utente <br>
-          - Service design <br>
-          - Team working
+          Skills: <br>
+          - Graphic design <br>
+          - Data visualisation
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/100247853/Whyracism" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100247853/Whyracism" class="green"> Complete project → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -307,18 +320,19 @@
       <div id="year" class="lavori_nomi year"> 2017 </div>
       <div id="haaring_nome" class="lavori_nomi nome"> Keith Haring video </div>
       <img src="images/arrow.png" id="haaring_arrow" class="lavori_nomi arrow">
-      <div id="categoria" class="lavori_nomi categoria"> Video animato </div>
+      <div id="categoria" class="lavori_nomi categoria"> Animated video </div>
     </div>
     <div id="description_haaring" class="display_none">
       <img src="images/haaring.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
-          Animazione che dà vita ai personaggi dell'opera di Keth Haring.
+          <!-- Animazione che dà vita ai personaggi dell'opera di Keth Haring. -->
+          Animation that brings to life the characters of Keth Haring's work.
         </div>
         <div id="work_description2" class="work_description">
-          Competenze: <br>
-          - Illustrazione <br>
-          - Animazione <br>
+          Skills: <br>
+          - Illustration <br>
+          - Animation <br>
           - Storytelling
         </div>
         <div id="work_description3" class="work_description link">
