--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
-    <meta name="keywords" content="Elisa Manzoni, portfolio">
+    <meta name="keywords" content="Elisa Manzoni, portfolio" title="Manzoni Elisa">
 
   </head>
   <body>
@@ -35,13 +35,23 @@
 
 <div id="body" class="body">
     <div id="home_description" class="home_description">
-      Sono <a class="elisa_manzoni"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
-      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>.
+    <!-- ITALIANO -->
+      <!-- Sono <a class="elisa_manzoni"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
+      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>. -->
+
+    <!-- INGLESE -->
+      I'm <a class="elisa_manzoni"></a> and I'm a <a class="sottolineato_verde">Communication Designer</a> from Bergamo (Italy). <br>
+      Lover of graphic design in all its facets, I have a particular passion for digital design and <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>.
     </div>
 
     <div id="link_scopri" class="home_description link_scopri">
-      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Scopri i miei progetti<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
-      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contattami<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a>
+    <!-- ITALIANO -->
+      <!-- <a href = "works.html"> <div id="link_progetti" class="link_progetti">Scopri i miei progetti<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
+      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contattami<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a> -->
+
+    <!-- INGLESE -->
+      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Discover my projects<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
+      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contact me<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a>
     </div>
 </div>
 
