--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch_home.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -40,8 +40,8 @@
       Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>. -->
 
     <!-- INGLESE -->
-      I'm <a class="elisa_manzoni"></a> and I'm a <a class="sottolineato_verde">Communication Designer</a> from Bergamo (Italy). <br>
-      Lover of graphic design in all its facets, I have a particular passion for digital design and <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>.
+      This is <a class="ME"></a><a class="elisa_manzoni"> <br>(Elisa Manzoni)</a>, <br>
+      an Interaction designer <br> who loves play with code.
     </div>
 
     <div id="link_scopri" class="home_description link_scopri">
@@ -50,8 +50,7 @@
       <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contattami<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a> -->
 
     <!-- INGLESE -->
-      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Discover my projects<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
-      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contact me<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a>
+      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Have fun watching my works<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
     </div>
 </div>
 
